# stm32-base

./: .gitignore  CMakeLists.txt  README.md  toolchain-arm-none-eabi.cmake
src/: main.c
